Fix display of some flatpakref files

Use the Name if the Title isn't provided

BUG: 384455